<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_favorites"
        android:orderInCategory="300"
        android:title="@string/text_favorites"
        android:icon="@drawable/ic_favorite_add"
        app:showAsAction="ifRoom"/>
</menu>